<resources>
    <string name="app_name">ChatProgram</string>
    <string name="title_activity_signup">Register</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_register">Register</string>
    <string name="sign_up_menu">Sign Up</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_link_to_login">Already registered. Sign in!</string>
    <string name="logo_description">Logo</string>
    <string name="title_activity_login">Login</string>

    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="auth_failed">Authentication failed, check email and password!</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter the email to reset the password.</string>
    <string name="btn_reset_password">Reset Password</string>


    <string name="action_settings">Settings</string>

    <string name="firebase_location" translatable="false">https://recyclerview.firebaseio.com/</string>
    <string name="menuitem_delete">Erase Drawing</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_line_width">Line Width</string>
    <string name="menuitem_save">Save</string>
    <string name="menuitem_print">Print</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="message_erase">Erase the drawing?</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_saved">Your saved painting can be viewed in the Photos app by selecting Device Folders from that app\'s menu</string>
    <string name="message_error_printing">Your device does not support printing</string>
    <string name="title_color_dialog">Choose Color</string>
    <string name="title_line_width_dialog">Choose Line Width</string>
    <string name="permission_explanation">To save an image, the app requires permission to write to external storage</string>


    <string name="hello_world">Hello world!</string>

    <string name="notification_title">notification from chat</string>

    <string name="notification_text">Check chat app</string>


    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="line_imageview_description">This displays the line thickness</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>


</resources>
